# robot-web

./: .env.bak  .gitignore  Cargo.toml  Makefile
migrations/2023-03-29-144341_account_pubg/: up.sql
robot-web/: package.json
robot-web/src/components/: HelloWorld.vue
robot-web/src/layouts/default/: AppBar.vue
src/: db.rs  main.rs  models.rs  schema.rs  validation.rs
src/api/bot/: player_data.rs
src/models/: mod.rs  pubg_account.rs
